tests/snapshots/yaml_suite_snapshots__yaml_suite_HWV9_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Document-end marker
  from: "@perlpunk"
  tags: footer
  yaml: "...\n"
  tree: "+STR\n-STR\n"
  json: ""
  dump: ""
