tests/snapshots/yaml_suite_snapshots__yaml_suite_HWV9_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: ""
  from: "@perlpunk"
  json: ""
  name: Document-end marker
  tags: footer
  tree: "+STR\n-STR\n"
  yaml: "...\n"
