tests/snapshots/yaml_suite_snapshots__yaml_suite_J3BT_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 5.12. Tabs and Spaces
  from: "http://www.yaml.org/spec/1.2/spec.html#id2775350"
  tags: spec whitespace upto-1.2
  yaml: "# Tabs and spaces\nquoted: \"Quoted ———»\"\nblock:—»|\n  void main() {\n  —»printf(\"Hello, world…"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :quoted\n   =VAL \"Quoted \\t\n   =VAL :block\n   =VAL |void main() {…"
  json: "{\n  \"quoted\": \"Quoted \\t\",\n  \"block\": \"void main() {\\n\\tprintf(\\\"Hello, world!\\\\n\\\");\\n}\\n…"
  dump: "quoted: \"Quoted \\t\"\nblock: |\n  void main() {\n  —»printf(\"Hello, world!\\n\");\n  }\n"
