tests/snapshots/yaml_suite_snapshots__yaml_suite_J5UC_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- from: "https://github.com/ingydotnet/yaml-pegex-pm/blob/master/test/mapping.tml"
  json: "{\n  \"foo\": \"blue\",\n  \"bar\": \"arrr\",\n  \"baz\": \"jazz\"\n}\n"
  name: Multiple Pair Block Mapping
  tags: mapping
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :foo\n   =VAL :blue\n   =VAL :bar\n   =VAL :arrr\n   =VAL :baz\n   =VAL :jazz\n  -MAP\n -DOC\n-STR\n"
  yaml: "foo: blue\nbar: arrr\nbaz: jazz\n"
