tests/snapshots/yaml_suite_snapshots__yaml_suite_J7PZ_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 2.26. Ordered Mappings
  from: "http://www.yaml.org/spec/1.2/spec.html#id2761780"
  tags: spec mapping tag unknown-tag
  yaml: "# The !!omap tag is one of the optional types\n# introduced for YAML 1.1. In 1.2, it is not\n# part of the standard tags and should not be\n# enabled by default.\n# Ordered maps are represented as\n# A sequence of mappings, with\n# each mapping having one key\n--- !!omap\n- Mark McGwire: 65\n- Sammy Sosa: 63\n- Ken Griffy: 58\n"
  tree: "+STR\n +DOC ---\n  +SEQ <tag:yaml.org,2002:omap>\n   +MAP\n    =VAL :Mark McGwire\n    =VAL :65\n   -MAP\n   +MAP\n    =VAL :Sammy Sosa\n    =VAL :63\n   -MAP\n   +MAP\n    =VAL :Ken Griffy\n    =VAL :58\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  {\n    \"Mark McGwire\": 65\n  },\n  {\n    \"Sammy Sosa\": 63\n  },\n  {\n    \"Ken Griffy\": 58\n  }\n]\n"
  dump: "--- !!omap\n- Mark McGwire: 65\n- Sammy Sosa: 63\n- Ken Griffy: 58\n"
